# 0Admin-NEXT

./: .env.example  .env.staging.example  .gitignore  Coding-Agents-Prompt_Template_Cursor.md  Coding-Agents_Vorgaben.md  README.md  alembic.ini  api_upload.md  debug_tool.py  mahwesen_final_diff.patch  mcp.config.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-google.txt  requirements.txt
.00_backup/: Prompt-Template für Coding-Agents.md
.cursor/plans/: e-invoice-hardening-operate-540266e9.plan.md
.cursor/rules/: Coding-Agent-Policy.mdc  Event-Outbox-Policy-Ereignisrichtlinie.mdc  Issue-Template_für_GitHub_Copilot_Coding-Agent.mdc  Overview_README.md  agents.mdc
.github/workflows/: ci-quality-gate.yml  ci.yml  console.yml  db-contracts-nightly.yml  node.yml  python.yml  smoke.yml  staging-deploy.yml  u3-p1b-p2-smokes.yml
agents/: README.md
agents/comm/: __init__.py  brevo_schema.py  event_sink.py  events.py  outbound_tags.py
agents/einvoice/: __init__.py  approval.py  archive.py  dto.py  numbering.py  samples.py  stammdaten.py  summary.py
agents/erechnung/: specification.md
agents/inbox_worker/: __init__.py  parsers.py  pipeline.py  runner.py
agents/mahnwesen/: __init__.py  approval_store.py  clients.py  config.py  dto.py  kpi.py  mvr.py  mvr_approval.py  playbooks.py  policies.py  providers.py  specification.md
agents/outbox_publisher/: __init__.py  policy.py  runner.py  transports.py
agents/shared/: flock_client.py
artifacts/: specification.md
artifacts/inbox_local/: 2025-01-01T00:00:00Z_26f0bdf579de11103400516e54b57c7cabeaa661ed18570a61f547d5f980ca6a_result.json  2025-01-01T00:00:00Z_4d4ccffbcebdbec90447b14a70fe7c25ee2f1d05d26a6ee10dbca4e4c19a51c5_result.json  2025-01-01T00:00:00Z_672694342994740a4e2bbc0c2feeb9e319e951667ab59ea5c2d9b43aa69bef83_result.json  2025-01-01T00:00:00Z_debca6bae284be444467dca0cbecafe61425bb7eee6647b8dfcc5a52822597b8_result.json
artifacts/tests/: smoke_output.txt
backend/: README.md  app.py
backend/apps/: README.md
backend/clients/: __init__.py
backend/common/: specification.md
backend/config/: specification.md
backend/contracts/: <modul>.contract.yaml  erechnung.contract.yaml  mahnwesen.contract.yaml
backend/core/: README.md  config.py  logging.py  specification.md
backend/integrations/: brevo_client.py
backend/mcp_server/: __init__.py  __main__.py  config.py  logging.py  policy.py  registry.py  server.py
backend/migrations/: specification.md
ci/: constraints.txt
constraints/: _combo.in  _floor.txt  pins-py312.txt  py312.txt
data/: README.md
docs/: Coding-Agents_Vorgaben.md  README.md  event_outbox_policy.md  meta-rules.md  roadmap.md
docs/Roadmap_Wochenplan/: 0Admin-NEXT-Roadmap.md  251017_roadmap_alt.md  KW42_Wochenplan
docs/agents/: comm_webhooks.md  einvoice_morning_runbook.md  mahnwesen.md  mahnwesen_betrieb.md  mahnwesen_kpi_bounce.md  mahnwesen_mvr_runbook.md  morning_operate_runbook.md  operate_canary.md  operate_canary_rollout.md  sender_dns_checklist.md  sender_dns_runbook.md
docs/apps/: README.md
docs/einvoice/: hardening.md
docs/inbox/: flock_enablement.md  importer.md  orchestration.md  quality.md  read_api.md  read_model.md
docs/mcp/: architecture.md  contracts.md  flows.md  migration.md  policies.md  security.md  vscode_105_migration.md
docs/ops/: inbox_runbook.md  read_api_troubleshooting.md
docs/outbox/: README.md
frontend/: README.md
frontend/console/: README.md  index.html  package-lock.json  package.json
ops/: README.md
ops/alembic/: env.py
ops/mcp/: README.md
ops/runbooks/: backup_restore.md  ci.md  console.md  logrotate.md  mail_connectors.md  mail_ingest.md  migrations.md  observability.md  ops_hardening.md  ops_tasks.md  outbox_publisher.md  secrets.md  security.md  staging_playbook.md  storage_rotation.md  tenants.md  worker_inbox.md
ops/scripts/: logrotate.conf  pg_backup.sh  pg_restore.sh  storage_rotate.sh
tests/: README.md  conftest.py
tests/agents_mahnwesen/: conftest.py  test_approval_store.py  test_bounce_reconcile.py  test_brevo_adapter.py  test_canary_engine.py  test_canary_rollout.py  test_compose_template_offline.py  test_dispatch_event_offline.py  test_flock_integration_offline.py  test_flow_smoke_localdb.py  test_kpi_engine.py  test_local_overdue_provider.py  test_morning_operate.py  test_mvr_approval.py  test_mvr_dispatch_dryrun.py  test_mvr_rules.py  test_operate_tools.py  test_overdue_rules_offline.py  test_playbook_operate_flow.py  test_sender_security_tools.py  test_soft_bounce.py  test_templates_contract.py
tests/comm/: test_brevo_webhook_auth_basic.py  test_brevo_webhook_auth_hmac.py  test_brevo_webhook_auth_token.py  test_brevo_webhook_hmac.py  test_brevo_webhook_payloads.py  test_outbound_tagging.py
tests/einvoice/: test_cli_generate_and_approve.py  test_einvoice_morning_operate.py  test_facturx_pipeline.py  test_manifest_archiv.py  (+5 more)
tools/: README.md  check_views.py
(+304 files in other folders)
